--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             </a-assets>
 
             <a-marker preset="hiro">
-                <a-entity gltf-model="#tail" scale="5 5 5"></a-entity>
+                <a-entity light="type: directional; color: #FFF; intensity: 3" position="50 50 50"></a-entity>
+                <a-entity light="type: directional; color: #FFF; intensity: 3" position="-50 50 50"></a-entity>
+                <a-entity gltf-model="#tail" position="-2 -6 0" rotation="0 0 90" scale="5 5 5"></a-entity>
             </a-marker>
             
             <a-entity camera></a-entity>
